# AgentOps-03-CrewAI

./: LICENSE  README.md
idioms_prompt_creator/: README.md  pyproject.toml
idioms_prompt_creator/output/: 2025-10-24_Kindergarten_evaluation_report.md  2025-10-24_Kindergarten_idiomatic_prompts.txt  2025-10-24_Kindergarten_literal_prompts.txt  2025-10-24_Kindergarten_prompt_pairs.jsonl  2025-10-24_Parents_evaluation_report.md  2025-10-24_Parents_idiomatic_prompts.txt  2025-10-24_Parents_literal_prompts.txt  2025-10-24_Parents_prompt_pairs.jsonl  2025-10-24_Toddlers_evaluation_report.md  2025-10-24_Toddlers_idiomatic_prompts.txt  2025-10-24_Toddlers_literal_prompts.txt  2025-10-24_Toddlers_prompt_pairs.jsonl
idioms_prompt_creator/src/idioms_prompt_creator/: crew.py  main.py
idioms_prompt_creator/src/idioms_prompt_creator/config/: agents.yaml  tasks.yaml
